--- a/src/styles.css
+++ b/src/styles.css
@@ -74,6 +74,7 @@ h1 {
     padding: .3em;
     height: 1.6em;
     border-radius: 4px;
+    min-width: 210px;
   }
   .items li:hover {
     color: #607D8B;
